<resources>
    <string name="app_name">Study Slug</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">UCSC Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="addClassesMessgae">Select Your Classes</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- AddCoursesActivity Strings -->
    <string name="findClassesMSG">Find Your Classes</string>
    <string name="prompt_department">Enter Department</string>
    <string name="prompt_course_number">Enter Course Number</string>
    <string name="prompt_section">Enter Course Section</string>
    <string name="action_addClasses_info">Submit</string>
    <string-array name="departments">Departments
        <item>CMPS</item>
        <item>CMPE</item>
        <item>PSYC</item>
        <item>WRIT</item>
    </string-array>

    <!-- navView Strings -->
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_maps">Maps</string>
    <string name="nav_settings">Settings</string>
    <string name="addclasses_dept">Enter department</string>
    <string name="addclasses_number">Enter course number</string>
    <string name="addclasses_section">Enter section number</string>
    <string name="start_button">Start!</string>
    <string name="cancel_button">Cancel</string>
    <string name="profile_add_class">ADD A CLASS</string>
    <string name="profile_find_study_slugs">FIND STUDY SLUGS</string>
    <string name="profile_add_class">ADD A CLASS</string>
    <string name="profile_sign_out">SIGN OUT</string>
    <string name="profile_drop_selected_class">DROP SELECTED CLASS</string>
</resources>
