<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center_horizontal"
    tools:context=".AddCoursesActivity">

    <EditText
        android:id="@+id/user_department"
        style="@style/Base.TextAppearance.AppCompat.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/white"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/addclasses_dept"
        android:inputType="text"
        android:textColor="@color/colorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/user_course_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_course_number"
        style="@style/Base.TextAppearance.AppCompat.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/addclasses_number"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/user_course_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_department" />

    <EditText
        android:id="@+id/user_course_section"
        style="@style/Base.TextAppearance.AppCompat.Inverse"
        android:layout_width="match_parent"
        android:padding="8dp"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/addclasses_section"
        android:inputType="text"
        android:textColor="@color/colorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/add_courses_submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_course_number" />

    <Button
        android:id="@+id/add_courses_submit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorSecondary"
        android:shadowColor="@color/colorPrimary"
        android:text="@string/action_addClasses_info"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/add_courses_cancel_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_course_section" />

    <Button
        android:id="@+id/add_courses_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorSecondary"
        android:shadowColor="@color/colorPrimary"
        android:text="@string/cancel_button"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add_courses_submit_button"
        app:layout_constraintTop_toBottomOf="@+id/user_course_section" />
</android.support.constraint.ConstraintLayout>